Blender : Mesh to Curve : Hard crash when target mesh has a object shrinkwrapped to it #50899

Closed
opened 2017-03-09 07:52:16 +01:00 by Carlo Andreacchio · 8 comments

System Information
Windows 7 x64, gtx 580

Blender Version
Broken: r59815 (2.68), 810d7d4 (2.78)
Worked r59223 (2.68)

Short description of error
When you have an object which you have another object shrinkwrapped to it, and you convert it to curve. it hard crashes blender

Exact steps for others to reproduce the error

  1. open attached blend file
  2. alt c
  3. select curve from mesh
  4. crash
    crash.blend
**System Information** Windows 7 x64, gtx 580 **Blender Version** Broken: r59815 (2.68), 810d7d4 (2.78) Worked r59223 (2.68) **Short description of error** When you have an object which you have another object shrinkwrapped to it, and you convert it to curve. it hard crashes blender **Exact steps for others to reproduce the error** 1. open attached blend file 2. alt c 3. select curve from mesh 4. crash [crash.blend](https://archive.blender.org/developer/F505916/crash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I see two solutions here:

  • Make the Shrinkwrap also work for curves or ...
  • Before starting the conversion, make sure that no mesh is using this object as a Shrinkwrap target.
I see two solutions here: - Make the Shrinkwrap also work for curves or ... - Before starting the conversion, make sure that no mesh is using this object as a Shrinkwrap target.

The previous way it was handled in blender was just to unset the shrinkwrap targets before the conversion. As shrink wraps do not work with curves & nurbs surfaces, I would assume that it would be better just to unset pre conversion.

The main reason for this bug is just to prevent blender from having hard crashes, as one of our artists did it by accident and realised what he had done.

The previous way it was handled in blender was just to unset the shrinkwrap targets before the conversion. As shrink wraps do not work with curves & nurbs surfaces, I would assume that it would be better just to unset pre conversion. The main reason for this bug is just to prevent blender from having hard crashes, as one of our artists did it by accident and realised what he had done.

This issue was referenced by a81ea40836

This issue was referenced by a81ea408367abe2f33b351ff6dcc6b09170fd088

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks for the fix :)

Thanks for the fix :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50899
No description provided.